...
            modifier = Modifier
                .size(50.dp)
                .padding(12.dp)
                .clickable {
                    onIconClick(!darkMode)
                }
                .testTag("modeIcon")
        )
    }
}

@Composable
fun AnswerView(operation: String, result: String) {
...
            .fillMaxSize()
            .padding(12.dp),
        verticalArrangement = Arrangement.Bottom
    ) {
        items(padItems.size) {
            val text = padItems[it]
            CircleWithText(text = padItems[it]) { valueClicked ->
                when (text) {
                    "=" -> {
                        calculate.invoke()
                    }

                    "C" -> {
...
